# orp_hardness

./: .gitignore  CLAUDE.md  analysis_notes.tex  dep_graph_document.html  general_kappa_algorithm.tex  index.html  np_hardness_proof_revised.tex  orp_np_hardness_corrected_note.tex  proof_summary.tex  sect0001.html  sect0002.html  sect0003.html  sect0004.html  sect0005.html  sect0006.html  sect0007.html  sect0008.html  two_type_algorithm.tex
.github/workflows/: deploy.yml  docs.yml
blueprint/: README.md  decl_links.json  deploy.sh  make.sh
blueprint/src/: content.tex  print.tex  web.tex
blueprint/src/macros/: common.tex  print.tex  web.tex
blueprint/tools/: link_to_source.py
docs/: SimpleBlueprint.html  navbar.html  tactics.html
docs/Batteries/Tactic/: OpenPrivate.html
docs/Init/: MetaTypes.html  Notation.html  Prelude.html  Tactics.html  Try.html
docs/Init/Data/: Float.html
docs/Init/Grind/: Config.html
docs/Init/Omega/: Constraint.html
docs/Lean/: MetavarContext.html  ReducibilityAttrs.html
docs/Lean/Elab/: AssertExists.html  Extra.html  Match.html  Parallel.html  StructInst.html
docs/Lean/Meta/: Order.html  Sym.html
docs/Lean/Widget/: Types.html
docs/Mathlib/Data/: Subtype.html
docs/SimpleBlueprint/: Basic.html
lean_blueprint/: .gitignore  CLAUDE.md  LEARNINGS.md  SimpleBlueprint.lean  lake-manifest.json  lakefile.toml  pyproject.toml
lean_blueprint/SimpleBlueprint/: Basic.lean
lean_blueprint/blueprint/src/: content.tex  plastex.cfg  print.tex  web.tex
lean_blueprint/blueprint/src/macros/: common.tex  print.tex
(+121 files in other folders)
